	* 13/09:
	- starting project
	- IPC with ilenia