@@ -1,3 +1,6 @@
+	* 14/09:
+	- created update-repos a wrapper for ilenia.py -u that allows
+	users to update repos info
 	* 13/09:
 	- starting project
 	- IPC with ilenia
